@@ -1,3 +1,8 @@
+*SVN*
+
+* Fix regression where the association would not construct new finder SQL on save causing bogus queries for "WHERE owner_id = NULL" even after owner was saved.  #8713 [Bryan Helmkamp]
+
+
 *1.15.5* (October 12th, 2007)
 
 * Depend on Action Pack 1.4.4
